# cxxshm

./: .clang-tidy  .clang-tidy-noerrors  .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile.in  README.md  define.cmake  setup.cmake  warnings.cmake
.github/workflows/: clang-format.yml  cmake.yml
cmake_files/: Config.cmake.in  compileropts.cmake  define.cmake  setup.cmake  warnings.cmake
code_generation_templates/: version_info.cpp
include/: CMakeLists.txt  cxxshm.hpp
scripts/: check_format.sh  format.sh  gen_version_info_cpp.sh
src/: CMakeLists.txt  cxxshm.cpp
test/: CMakeLists.txt  test.cpp  test_1.cpp  test_all.cpp
